--- a/regular_expression.ipynb
+++ b/regular_expression.ipynb
@@ -90,9 +90,150 @@
     "\n",
     "    # Extracting phone numbers\n",
     "    extracted_phone_numbers = re.findall(phone_number_regex, response.text)\n",
-    "    print(extracted_phone_numbers)\n",
-    "else:\n",
-    "    print(\"Failed to retrieve the webpage.\")\n"
+    "    print(extracted_phone_numbers)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['(206) 443-2560', '(253) 288-7700', '(800) 464-1476', '(360) 378-1962']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import re\n",
+    "url = 'https://visitseattle.org/things-to-do/sightseeing/'\n",
+    "response = requests.get(url)\n",
+    "data = response.text\n",
+    "new_pattern = r'\\(\\d{3}\\)\\s\\d{3}-\\d{4}'\n",
+    "# Using re.findall to extract all matching phone numbers from the string\n",
+    "phone_numbers = re.findall(new_pattern, data)\n",
+    "print(phone_numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['hcdehelp@uw.edu', 'hcdehelp@uw.edu', 'hcdeweb@uw.edu']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import re\n",
+    "url = 'https://www.hcde.washington.edu/contact-us'\n",
+    "response = requests.get(url)\n",
+    "data = response.text\n",
+    "pattern = r'[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}'\n",
+    "email = re.findall(pattern, data)\n",
+    "print(email)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 3: Extracting Domain Name\n",
+    "\n",
+    "**Problem**: Extract the domain name from an email address.  \n",
+    "**String**: \"user@example.com\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Domain name: foxmail\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Function to extract domain name from an email address\n",
+    "def extract_domain(email):\n",
+    "    # Regular expression for extracting the domain name\n",
+    "    # @: Matches the @ character in the email address\n",
+    "    # ([a-zA-Z0-9.-]+): Captures the domain name (alphanumeric characters, dot, and hyphen)\n",
+    "    # \\.: Matches the literal dot before the top-level domain\n",
+    "    domain_name_regex = r'@([a-zA-Z0-9.-]+)\\.'\n",
+    "\n",
+    "    # Extracting the domain name\n",
+    "    extracted_domain = re.search(domain_name_regex, email)\n",
+    "    return extracted_domain.group(1) if extracted_domain else \"Domain not found\"\n",
+    "\n",
+    "# Email address to extract the domain from\n",
+    "email = \"usjackier@foxmail.com\"\n",
+    "\n",
+    "# Extracting the domain name\n",
+    "domain_name = extract_domain(email)\n",
+    "\n",
+    "# Printing the result\n",
+    "print(\"Domain name:\", domain_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 5: Validating an IP Address\n",
+    "\n",
+    "**Problem**: Check if a string is a valid IPv4 address.  \n",
+    "**String**: \"192.168.1.1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is the IP address valid? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Function to validate an IPv4 address\n",
+    "def validate_ipv4(ip_address):\n",
+    "    # Regular expression for validating an IPv4 address\n",
+    "    # ^ and $: Start and end of the string\n",
+    "    # 25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?: Matches an octet of the IP address\n",
+    "    ipv4_regex = r'^(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)\\.(25[0-5]|2[0-4][0-9]|[01]?[0-9][0-9]?)$'\n",
+    "\n",
+    "    # Checking if the IP address is valid\n",
+    "    return bool(re.match(ipv4_regex, ip_address))\n",
+    "\n",
+    "# IP address to validate\n",
+    "ip_address = \"192.168.1.1\"\n",
+    "\n",
+    "# Validating the IP address\n",
+    "is_valid_ipv4 = validate_ipv4(ip_address)\n",
+    "\n",
+    "# Printing the result\n",
+    "print(\"Is the IP address valid?\", is_valid_ipv4)"
    ]
   },
   {
