--- a/regular_expression.ipynb
+++ b/regular_expression.ipynb
@@ -146,7 +146,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Problem 3: Extracting Domain Name\n",
+    "### Problem 3: Password Strength Check\n",
+    "\n",
+    "**Problem**: Problem: Check if a password is at least 8 characters long, contains a digit, an uppercase, and a lowercase letter.\n",
+    "**String**: \"Password1\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valid password\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# The given string to be validated\n",
+    "password = \"Password1\"\n",
+    "\n",
+    "# Regular expression to check if password is at least 8 characters long,\n",
+    "# contains at least one digit, one uppercase, and one lowercase letter\n",
+    "regex = r\"^(?=.*[a-z])(?=.*[A-Z])(?=.*\\d).{8,}$\"\n",
+    "\n",
+    "# Using re.match() to check if the regex pattern matches the given password\n",
+    "if re.match(regex, password):\n",
+    "    print(\"Valid password\")\n",
+    "else:\n",
+    "    print(\"Invalid password\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Problem 4: Extracting Domain Name\n",
     "\n",
     "**Problem**: Extract the domain name from an email address.  \n",
     "**String**: \"user@example.com\""
@@ -237,10 +277,72 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Reference"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Basic Syntax\n",
+    "\n",
+    "- `.`: Matches any single character except newline\n",
+    "- `^`: Matches the start of the string\n",
+    "- `$`: Matches the end of the string\n",
+    "- `*`: Matches 0 or more repetitions of the preceding element\n",
+    "- `+`: Matches 1 or more repetitions of the preceding element\n",
+    "- `?`: Matches 0 or 1 repetition of the preceding element\n",
+    "- `{n}`: Matches exactly n repetitions of the preceding element\n",
+    "- `{n,}`: Matches at least n repetitions of the preceding element\n",
+    "- `{n,m}`: Matches between n and m repetitions of the preceding element\n",
+    "- `|`: Alternation, matches either the pattern before or the pattern after the symbol\n",
+    "\n",
+    "### Character Classes\n",
+    "\n",
+    "- `[abc]`: Matches any one of the characters a, b, or c\n",
+    "- `[^abc]`: Matches any character that is not a, b, or c\n",
+    "- `[a-z]`: Matches any character from a to z\n",
+    "- `[A-Z]`: Matches any character from A to Z\n",
+    "- `[0-9]`: Matches any digit\n",
+    "- `\\d`: Matches any digit (equivalent to [0-9])\n",
+    "- `\\D`: Matches any non-digit\n",
+    "- `\\w`: Matches any word character (equivalent to [a-zA-Z0-9_])\n",
+    "- `\\W`: Matches any non-word character\n",
+    "- `\\s`: Matches any whitespace character\n",
+    "- `\\S`: Matches any non-whitespace character\n",
+    "\n",
+    "### Special Characters\n",
+    "\n",
+    "- `\\`: Escapes a special character\n",
+    "- `()` : Defines a group\n",
+    "- `(?:...)`: Non-capturing group\n",
+    "- `(?=...)`: Positive lookahead assertion\n",
+    "- `(?!...)`: Negative lookahead assertion\n",
+    "\n",
+    "### Examples\n",
+    "\n",
+    "- `abc`: Matches the string \"abc\"\n",
+    "- `abc|def`: Matches \"abc\" or \"def\"\n",
+    "- `^abc`: Matches any string that starts with \"abc\"\n",
+    "- `abc$`: Matches a string that ends with \"abc\"\n",
+    "- `a.b`: Matches any string containing \"a\", any character, then \"b\"\n",
+    "- `a*`: Matches 0 or more 'a's\n",
+    "- `a+`: Matches 1 or more 'a's\n",
+    "- `a?`: Matches 0 or 1 'a'\n",
+    "- `\\d{2,4}`: Matches between 2 and 4 digits"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
